--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo": "^27.0.1",
     "moment": "^2.22.2",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
